# fastapi-aiogram-template

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/: __init__.py  main.py
backend/api/v1/: __init__.py  deps.py
backend/api/v1/routes/: bot.py
backend/bot/: helpers.py  misc.py  translation.py
backend/bot/middlewares/: __init__.py  base.py  i18n.py  throttling.py  users.py
backend/bot/routers/: __init__.py
backend/config/: settings.py
backend/db/: base.py  session.py
migrations/: env.py
